# pytheory

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  Pipfile  README.md  demo_new_synths.py  hello.py  l.py  old.py  play_recording.py  pyproject.toml  recording.mid  t.py  test_live.py  test_pytheory.py
.claude/hooks/: session-start.sh
.claude/skills/: chord-lab-with-pytheory  composing-with-pytheory  keys-and-harmony-with-pytheory  playing-guitar-with-pytheory  scales-modes-and-tunings-with-pytheory  transcription-and-notation-with-pytheory
.github/workflows/: ci.yml  docs.yml
docs/: CNAME  Makefile  changelog.rst  conf.py  generate_audio.py  index.rst
docs/_templates/: audio.html  layout.html
docs/api/: audio.rst  charts.rst  chords.rst  live.rst  maqam.rst  play.rst  ragas.rst  rhythm.rst  scales.rst  serialism.rst  systems.rst  tones.rst  tuner.rst
docs/guide/: chords.rst  claude.rst  cli.rst  cookbook.rst  drums.rst  effects.rst  fretboard.rst  listening.rst  live.rst  nashville-blues-tabs.rst  playback.rst  quickstart.rst  repl.rst  rhythm.rst  scales.rst  sequencing.rst  serialism.rst  synths.rst  systems.rst  theory.rst  tones.rst
examples/: chord_charts.py  chord_identifier.py  chord_tension.py  circle_of_fifths.py  explore.py  fretboard_explorer.py  interval_trainer.py  key_detection.py  key_explorer.py  midi_converter.py  overtone_series.py  progression_writer.py  showcase_new_features.py  song.py  song_showoff.py  songs.py  sprunki.py  temperament_comparison.py  tutorial.ipynb  world_scales.py
ext/: pytheory-logo.ai
plugin/: PRIVACY.md  README.md
plugin/.claude-plugin/: marketplace.json
plugin/plugins/composing-with-pytheory/.claude-plugin/: plugin.json
plugin/plugins/composing-with-pytheory/skills/chord-lab-with-pytheory/: SKILL.md
plugin/plugins/composing-with-pytheory/skills/composing-with-pytheory/: SKILL.md
plugin/plugins/composing-with-pytheory/skills/keys-and-harmony-with-pytheory/: SKILL.md
plugin/plugins/composing-with-pytheory/skills/playing-guitar-with-pytheory/: SKILL.md
plugin/plugins/composing-with-pytheory/skills/scales-modes-and-tunings-with-pytheory/: SKILL.md
plugin/plugins/composing-with-pytheory/skills/transcription-and-notation-with-pytheory/: SKILL.md
pytheory/: __init__.py  _statics.py  audio.py  bootstrap.py  charts.py  chords.py  cli.py  core.py  diagrams.py  live.py  live_tui.py  maqam.py  metronome.py  play.py  ragas.py  repl.py  rhythm.py  scales.py  serialism.py  studio.py  systems.py  tones.py  tuner.py
tests/: _util.py  conftest.py  test_audio.py  test_audit_fixes.py  test_chords.py  test_cli.py  test_diagrams.py  test_drums.py  test_dsp_quality.py  test_fretboard.py  test_keys.py  test_live.py  test_maqam.py  test_metronome.py  test_misc.py  test_notation.py  test_playback.py  test_polish_fixes.py  test_ragas.py  test_render_integration.py  test_rhythm.py  test_scales.py  test_serialism.py  test_systems.py  test_tones.py
